# Floorp-OS-Automator-Backend

./: .gitmodules  Cargo.toml  Cross.toml  DEVELOPERS.md  Makefile  README.md  Sapphillon.code-workspace  build.rs  build_error.txt  data.db  inject.patch  sqlite.db  weekly_work_report.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: check_protobuf.yml  release.yml  testing.yml
database/: Cargo.toml
database/src/: ext_plugin.rs  lib.rs  model.rs  permission.rs  plugin.rs  provider.rs  workflow.rs
demo_workflows/: README.md  expense_classifier.js  test_get_elements.js  verify_excel_plugin.js  verify_finder_plugin.js  verify_ocr_plugin.js  verify_slack.js  verify_thunderbird_plugin.js  verify_vscode_plugin.js  video_compare.js  vscode_to_floorp_form.js  workflow.js  workflow.js.bak  workspace_to_vscode.js  workspace_to_vscode_mac.js
demo_workflows/AppleScripts/: finder_search.applescript
demo_workflows/calender/: fake_events_google.ics  fake_events_thunderbird.ics
demo_workflows/demos/: calendar_aggregation_demo.js  cross_platform_researcher.js  deep_research.js  deep_research_ddg.js  github_compare.js  google_calendar_scraper.js  quick_commit_pr.js  subscription_deep_research.js  subscription_deep_research.md  subscription_optimization_deep_research.js  thunderbird_calendar_reader.js  video_compare.js  workflow.js  workspace_to_vscode.js
docs/: deno_runtime_separation_report.md  report.md
entity/: Cargo.toml
entity/src/: convert.rs
entity/srcsrc/: lib.rs
example/: nippou.js  nippou_result.txt
migration/src/: lib.rs  m20250908_000001_create_providers_and_models.rs  main.rs
plugins/excel/: Cargo.toml
plugins/excel/src/: 00_excel.js  lib.rs
plugins/exec/: Cargo.toml
plugins/fetch/: Cargo.toml  README.md
plugins/filesystem/: Cargo.toml
plugins/finder/: Cargo.toml  README.md
plugins/floorp/: Cargo.toml  README.md
plugins/git/: Cargo.toml
plugins/iniad/: Cargo.toml
plugins/iniad/src/: 00_iniad.js  lib.rs
plugins/llm-chat/: Cargo.toml
plugins/ocr/: Cargo.toml  README.md
plugins/ocr/src/: 00_ocr.js  lib.rs
plugins/search/: Cargo.toml
plugins/search/src/: 00_search.js  lib.rs  linux_search.rs  macos_search.rs  searcher.rs  walkdir_search.rs  windows_search.rs
plugins/thunderbird.bak/: Cargo.toml
plugins/vscode/: Cargo.toml
plugins/window/: Cargo.toml
scripts/: run_finder_test_node.js
src/: args.rs  debug_workflow.rs  dummy_plugin.rs  ext_plugin_manager.rs  global.rs  grpc_server.rs  init.rs  main.rs  plugin_installer.rs  proto_generated.rs  server.rs  services.rs  sysconfig.rs  test_support.rs  utils.rs  weather.rs  workflow.rs
src/proto_generated/: sapphillon.v1.rs  sapphillon.v1.tonic.rs
src/services/: greeter.rs  mod.rs  model.rs  plugin.rs  provider.rs  version.rs  workflow.rs
src/tests/: README.md  mod.rs
tests/: external_plugin_tests.rs
tests/external_plugin/: common.rs  (+1 more)
(+56 files in other folders)
