[package]
name = "iniad"
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true

edition = "2024"

[dependencies]
anyhow.workspace = true
log.workspace = true
deno_core.workspace = true
deno_error.workspace = true
sapphillon_core.workspace = true
ureq = { version = "3.1.0", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
