[package]
name = "search"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_core.workspace = true
deno_error.workspace = true
sapphillon_core.workspace = true
anyhow.workspace = true
walkdir = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
