[package]
name = "search"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_core.workspace = true
deno_error.workspace = true
sapphillon_core.workspace = true
anyhow.workspace = true
walkdir = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Windows: Windows Search API (Windows Index Search)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_System_Search",
    "Win32_Foundation",
    "Win32_System_Ole",
    "Win32_System_Variant",
] }

# macOS: Spotlight/MDQuery
[target.'cfg(target_os = "macos")'.dependencies]
mdquery-rs = "0.2"

# Linux: D-Bus for GNOME Tracker and KDE Baloo
[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = true, features = ["blocking"] }
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
